fix currently playing information overlapping other controls

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     left: 0;
     text-align: center;
     margin: auto;
+    z-index: -1;
 }
 
 .navbar-brand .brand-inner {
